# Modeling

./: CMakeLists.txt
scenes/: 01_spline.json  02_subdivspheres.json  03_subdivquads.json
src/apps/: 02_model.cpp  CMakeLists.txt
src/common/: CMakeLists.txt  scene.cpp  scene.h
